Recruiting Model/main/default/objects/Interview_Travel_Expense__c/Interview_Travel_Expense__c.object-meta.xml
<CustomObject>
    <description>Object storing all travel expenses associated to an applicant interview.</description>
    <label>Interview Travel Expense</label>
    <nameField>
        <displayFormat>ITX{0000}</displayFormat>
        <label>Interview Travel Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Travel Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>