Recruiting Model/main/default/objects/Interview_Travel_Expense__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <inlineHelpText>Enter confirmation code for travel</inlineHelpText>
    <label>Confirmation Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>