Recruiting Model/main/default/objects/Interview_Travel_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <inlineHelpText>Please select the type of expense</inlineHelpText>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airfare</fullName>
                <default>true</default>
                <label>Airfare</label>
            </value>
            <value>
                <fullName>Car Rental</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>